--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ a {
 
 /*========== Button styling ==========*/
 .btn {
+  width: 100%;
   font-family: "Open Sans";
   font-weight: 500;
   font-size: 16px;
@@ -79,6 +80,10 @@ a {
   border-radius: 8px;
   outline: none;
   border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   cursor: pointer;
 }
 
@@ -113,6 +118,64 @@ a {
   border: 2px solid #294f9a;
 }
 
+/*========== Navbar styling ==========*/
+.main-nav {
+  background: #101828;
+}
+
+.main-nav .container {
+  padding: 0;
+}
+
+.nav-wrapper {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-logo {
+  width: 260px;
+  max-width: 100%;
+  height: 56px;
+}
+
+.nav-items {
+  display: flex;
+  align-items: center;
+}
+
+.nav-items ul {
+  display: flex;
+  gap: 72px;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.nav-items ul li a {
+  font-family: "Open Sans";
+  font-size: 18px;
+  line-height: 32px;
+}
+
+.menu-btn {
+  background: #7dffaf;
+  color: #010610;
+  margin-left: 56px;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  transition: all 0.3s ease-in-out;
+}
+
+.menu-btn:hover {
+  background: #329859;
+  color: #f2fff7;
+}
+
 /*========== Hero section styling ==========*/
 .wlc-zeta {
   font-family: "Open Sans";
@@ -131,8 +194,8 @@ a {
 
 .hero-wrapper {
   background-color: #020711;
-  padding-top: 84px;
-  padding-bottom: 144px;
+  padding-top: 64px;
+  padding-bottom: 48px;
 }
 
 .hero-title {
@@ -141,8 +204,8 @@ a {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   font-weight: 700;
-  font-size: 72px;
-  line-height: 88px;
+  font-size: 40px;
+  line-height: 53px;
 }
 
 .hero-desc {
@@ -155,7 +218,7 @@ a {
 }
 
 .hero-right-img {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
@@ -165,8 +228,9 @@ a {
 }
 
 .hero-btns {
-  margin-top: 16px;
+  margin-top: 72px;
   display: flex;
+  flex-direction: column;
   gap: 24px;
 }
 
@@ -182,7 +246,7 @@ a {
 }
 
 .review-left {
-  width: 497px;
+  max-width: 497px;
 }
 
 .review-left h3 {
@@ -237,7 +301,7 @@ a {
 }
 
 .review-right {
-  width: 687px;
+  max-width: 687px;
 }
 
 .review-right h3 {
@@ -405,6 +469,165 @@ a {
   width: 48px;
   height: 48px;
   border-radius: 48px;
+}
+
+/*========== Our marketing process section styling ==========*/
+.marketing-wrapper {
+  background: #1d2939;
+  padding: 72px 0;
+}
+
+.marketing-wrapper .container {
+  padding: 0;
+}
+
+.marketing-heading {
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+  text-align: center;
+}
+
+.marketing-cards {
+  display: flex;
+  gap: 24px;
+  margin-top: 48px;
+}
+
+.marketing-card {
+  width: 100%;
+  background: #101828;
+  border: 1px solid #475467;
+  border-radius: 16px;
+  padding: 32px;
+}
+
+.marketing-card img {
+  width: 548px;
+  max-width: 100%;
+  border-radius: 8px;
+  margin: 0 auto;
+}
+
+.marketing-card-content {
+  margin-top: 32px;
+  font-family: "Open Sans";
+  font-size: 18px;
+  line-height: 34px;
+  text-align: center;
+  color: #fcfcfd;
+}
+
+/*========== How works section styling ==========*/
+.how-works-wrapper {
+  background: #101828;
+  padding-top: 72px;
+}
+
+.how-works-wrapper .container {
+  padding: 0;
+}
+
+.how-works-heading {
+  max-width: 545px;
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 58px;
+  text-align: center;
+  color: #fcfcfd;
+  margin: 0 auto;
+}
+
+.hw-items {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.hw-item {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+.hw-item p {
+  font-family: "Satoshi";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: #f2f4f7;
+}
+
+.hw-bottom-card {
+  width: 100%;
+  margin-top: 64px;
+  background: #1d2939;
+  border-radius: 16px;
+  padding: 64px 56px;
+  background-image: url("/assets/images/hw-bg.png");
+  background-position: top left;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-bottom: -120px;
+  position: relative;
+}
+
+.hw-bottom-card-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hw-bottom-card-left {
+  width: 800px;
+}
+
+.hw-bottom-card-left h2 {
+  width: 535px;
+  font-family: "Satoshi";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+}
+
+.hw-bottom-card-right {
+  width: 310px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.hw-card-item {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.hw-card-item p {
+  font-family: "Satoshi";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.hw-bottom-card-btns {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+/*========== Timeline section styling ==========*/
+.timeline-wrapper {
+  padding-top: 156px;
+  background: #010610;
 }
 
 /*========== Our process section styling ==========*/
@@ -722,5 +945,34 @@ a {
   .col-md-5 {
     flex: 0 0 41.6666666667%;
     max-width: 41.6666666667%;
+  }
+
+  .hero-wrapper {
+    padding-top: 84px;
+    padding-bottom: 144px;
+  }
+
+  .hero-title {
+    font-size: 72px;
+    line-height: 88px;
+  }
+
+  .hero-right-img {
+    display: flex;
+  }
+
+  .hero-btns {
+    margin-top: 16px;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .reviews-wrapper {
+    padding: 24px 0;
+  }
+
+  .review-inner {
+    flex-direction: column;
   }
 }
