feat: make responsive

--- a/style.css
+++ b/style.css
@@ -5,32 +5,32 @@
 }
 
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/assets/fonts/Satoshi-Black.otf');
+  font-family: "Satoshi";
+  src: url("/assets/fonts/Satoshi-Black.otf");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/assets/fonts/Satoshi-Bold.otf');
+  font-family: "Satoshi";
+  src: url("/assets/fonts/Satoshi-Bold.otf");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/assets/fonts/Satoshi-Medium.otf');
+  font-family: "Satoshi";
+  src: url("/assets/fonts/Satoshi-Medium.otf");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/assets/fonts/Satoshi-Regular.otf');
+  font-family: "Satoshi";
+  src: url("/assets/fonts/Satoshi-Regular.otf");
   font-weight: 400;
   font-style: normal;
 }
 
 body {
-  font-family: 'Barlow', 'Arges', sans-serif;
+  font-family: "Barlow", "Arges", sans-serif;
   margin: 0;
   padding: 0;
   font-size: 1rem;
@@ -40,7 +40,7 @@ body {
 }
 
 h1 {
-  font-family: 'Satoshi', 'Arges', sans-serif;
+  font-family: "Satoshi", "Arges", sans-serif;
 }
 
 a {
@@ -70,7 +70,7 @@ a {
 
 /*========== Button styling ==========*/
 .btn {
-  width: 100%;
+  /* width: 100%; */
   font-family: "Open Sans";
   font-weight: 500;
   font-size: 16px;
@@ -132,6 +132,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .nav-logo {
@@ -176,9 +177,90 @@ a {
   color: #f2fff7;
 }
 
+.humburger {
+  display: none;
+}
+
+@media screen and (max-width: 1023px) {
+  .nav-logo {
+    width: 200px;
+    height: auto;
+  }
+
+  .nav-items ul {
+    gap: 40px;
+  }
+
+  .menu-btn {
+    margin-left: 40px;
+    font-size: 16px;
+    padding: 11px 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-logo {
+    width: 150px;
+    height: auto;
+  }
+
+  .nav-wrapper {
+    padding: 12px 20px;
+  }
+
+  .nav-items {
+    padding: 0 20px;
+    flex-direction: column;
+    align-items: start;
+    position: absolute;
+    z-index: 10;
+    top: 56px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: #1b376c;
+    transition: 0.3s;
+    height: 0px;
+    overflow: hidden;
+  }
+
+  .active .nav-items {
+    height: 300px;
+  }
+
+  .humburger-close {
+    display: none;
+  }
+
+  .active .humburger .humburger-open {
+    display: none;
+  }
+
+  .active .humburger .humburger-close {
+    display: block !important;
+  }
+
+  .nav-items ul {
+    padding-top: 24px;
+    flex-direction: column;
+    align-items: start;
+    gap: 18px;
+    margin-bottom: 40px;
+  }
+
+  .humburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .menu-btn {
+    margin: 0;
+  }
+}
+
 /*========== Hero section styling ==========*/
 .wlc-zeta {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 500;
   font-size: 14px;
   line-height: 22px;
@@ -209,7 +291,7 @@ a {
 }
 
 .hero-desc {
-  font-family: 'Barlow', sans-serif;
+  font-family: "Barlow", sans-serif;
   padding: 16px 0;
   font-size: 18px;
   line-height: 28px;
@@ -250,7 +332,7 @@ a {
 }
 
 .review-left h3 {
-  font-family: 'Satoshi';
+  font-family: "Satoshi";
   font-weight: 700;
   font-size: 48px;
   line-height: 65px;
@@ -293,7 +375,7 @@ a {
 }
 
 .rating-number p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
@@ -305,7 +387,7 @@ a {
 }
 
 .review-right h3 {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 600;
   font-size: 32px;
   line-height: 44px;
@@ -326,7 +408,7 @@ a {
 }
 
 .review-right-item p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 26px;
   color: #c7d9fc;
@@ -358,14 +440,14 @@ a {
 }
 
 .st-info-left p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 16px;
   line-height: 27px;
   color: #c7d9fc;
 }
 
 .st-author-name {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 600;
   font-size: 18px;
   line-height: 26px;
@@ -374,7 +456,7 @@ a {
 
 .st-author-position {
   margin-top: 8px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 16px;
   line-height: 22px;
   color: #c7d9fc;
@@ -382,7 +464,7 @@ a {
 
 .single-testimonial-text {
   margin-top: 8px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 24px;
   line-height: 34px;
   color: #fcfcfd;
@@ -430,7 +512,7 @@ a {
 
 .multi-testimonial-text {
   margin-top: 8px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 26px;
   color: #fcfcfd;
@@ -450,7 +532,7 @@ a {
 }
 
 .multi-testimonial-info .author-name {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 600;
   font-size: 18px;
   line-height: 26px;
@@ -459,7 +541,7 @@ a {
 
 .multi-testimonial-info .author-position {
   margin-top: 8px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 16px;
   line-height: 22px;
   color: #c7d9fc;
@@ -542,7 +624,8 @@ a {
 
 .hw-items {
   margin-top: 40px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   align-items: center;
   gap: 16px;
 }
@@ -572,7 +655,7 @@ a {
   border-radius: 16px;
   padding: 64px 56px;
   background-image: url("/assets/images/hw-bg.png");
-  background-position: top left;
+  background-position: bottom left;
   background-size: contain;
   background-repeat: no-repeat;
   margin-bottom: -120px;
@@ -624,10 +707,112 @@ a {
   gap: 24px;
 }
 
+@media screen and (max-width: 767px) {
+  .how-works-wrapper {
+    padding: 0 20px;
+    padding-top: 24px;
+  }
+
+  .how-works-heading {
+    font-family: "DM Sans";
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+  }
+
+  .hw-items {
+    margin-top: 24px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .hw-item img {
+    width: 32px;
+    height: 32px;
+  }
+
+  .hw-item p {
+    font-family: "Nunito";
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+  }
+
+  .hw-bottom-card-left {
+    display: none;
+  }
+
+  .hw-bottom-card {
+    padding: 24px 17px;
+  }
+
+  .hw-card-item {
+    gap: 12px;
+  }
+
+  .hw-card-item svg {
+    width: 24px;
+  }
+
+  .hw-card-item p {
+    font-size: 18px;
+    line-height: 32px;
+  }
+}
+
 /*========== Timeline section styling ==========*/
 .timeline-wrapper {
   padding-top: 156px;
   background: #010610;
+}
+
+.tl-mobile-inner {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .tl-mobile-inner {
+    display: block;
+    padding: 0 20px;
+  }
+
+  .tl-mobile-inner h2 {
+    font-family: "DM Sans";
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+  }
+
+  .tl-mobile-cards {
+    margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .tl-mobile-card {
+    background: #101828;
+    border: 1px solid #344054;
+    border-radius: 8px;
+    padding: 24px;
+  }
+
+  .tl-mobile-card h4 {
+    font-family: "Open Sans";
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #fafafa;
+  }
+
+  .tl-btn {
+    margin-top: 8px;
+    font-family: "Open Sans";
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 22px;
+    color: #7dffaf;
+  }
 }
 
 /*========== Our process section styling ==========*/
@@ -662,7 +847,7 @@ a {
 
 .process-card-content {
   margin-top: 32px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 34px;
   text-align: center;
@@ -670,7 +855,7 @@ a {
 }
 
 .process-heading {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 700;
   font-size: 48px;
   line-height: 65px;
@@ -686,6 +871,27 @@ a {
   padding: 8px 76.5px;
 }
 
+.process-slider {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .process-cards {
+    display: none;
+  }
+
+  .process-slider {
+    display: block;
+    /* width: 100%; */
+    /* position: relative; */
+    /* overflow: hidden; */
+  }
+
+  .process-slider .process-card {
+    /* width: 290px; */
+  }
+}
+
 /*========== FAQ section styling ==========*/
 .faq-wrapper {
   background-color: #010610;
@@ -694,7 +900,9 @@ a {
 
 .faq-inner {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  gap: 24px;
 }
 
 .faq-left {
@@ -702,6 +910,7 @@ a {
 }
 
 .faq-left img {
+  display: block;
   width: 82px;
   height: 82px;
   max-width: 100%;
@@ -710,14 +919,14 @@ a {
 .faq-left h2 {
   margin-top: 19px;
   margin-bottom: 16px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 500;
   font-size: 36px;
   line-height: 49px;
 }
 
 .faq-left p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 26px;
   color: rgba(255, 255, 255, 0.7);
@@ -749,7 +958,7 @@ a {
 }
 
 .faq-accordion-title {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 700;
   font-size: 24px;
   line-height: 36px;
@@ -762,10 +971,63 @@ a {
 }
 
 .faq-accordion-body p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 26px;
   color: rgba(255, 255, 255, 0.7);
+}
+
+@media screen and (max-width: 767px) {
+  .faq-wrapper {
+    padding: 16px 0;
+  }
+
+  .faq-inner {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .faq-left {
+    text-align: center;
+    max-width: 335px;
+  }
+
+  .faq-left img {
+    display: none;
+  }
+
+  .faq-left h2 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .faq-left p {
+    font-family: "Nunito";
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .faq-accordion-title {
+    font-family: "Nunito";
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .faq-accordion-item {
+    padding: 24px;
+  }
+
+  .faq-accordion-body p {
+    font-family: "Nunito";
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .faq-accordion-btn svg {
+    min-width: 13.5px;
+    height: 7.5px;
+  }
 }
 
 /*========== Free booking section styling ==========*/
@@ -784,14 +1046,14 @@ a {
   border-radius: 16px;
   padding: 42px;
   padding-bottom: 62px;
-  background-image: url('/assets/images/booking-bg.png');
-  background-position: top left;
+  background-image: url("/assets/images/booking-bg.png");
+  background-position: bottom left;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .booking-content h3 {
-  font-family: 'font1';
+  font-family: "font1";
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
@@ -800,7 +1062,7 @@ a {
 }
 
 .booking-content p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 32px;
   color: #e4e7ec;
@@ -846,22 +1108,38 @@ a {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .booking-wrapper {
     background-color: inherit;
-    padding: 0;
-    margin-bottom: 40px;
+    padding: 40px 0;
   }
   .booking-wrapper .booking-inner .booking-content h3 {
     font-size: 24px;
     line-height: 32px;
+    margin-bottom: 12px;
   }
 
   .booking-inner {
+    background-image: none;
+    position: relative;
     padding: 20px;
     padding-bottom: 24px;
     position: relative;
     overflow: hidden;
+  }
+
+  .booking-mb-bg {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: block;
+    background-image: url("/assets/images/booking-mb-bg.png");
+    height: 134px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-size: cover;
   }
 
   .booking-content p {
@@ -878,6 +1156,7 @@ a {
     z-index: 99;
   }
   .booking-btns {
+    margin-top: 14px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -919,7 +1198,7 @@ a {
 }
 
 .newsletter-container h2 {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 600;
   font-size: 32px;
   line-height: 44px;
@@ -945,7 +1224,7 @@ a {
 
 .newsletter-input input::placeholder,
 .newsletter-input input {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -966,7 +1245,7 @@ a {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .Newsletter-wrapper {
     padding-top: 32px;
     padding-bottom: 24px;
@@ -977,9 +1256,10 @@ a {
     max-width: 335px;
   }
   .newsletter-container h2 {
-    font-size: 14px;
+    font-family: "Nunito";
     font-weight: 500;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 19px;
   }
   .newsletter-input {
     gap: 8px;
@@ -1036,7 +1316,7 @@ a {
 
 .footer-social a {
   padding: 8px 16px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
 }
 
@@ -1048,17 +1328,85 @@ a {
 }
 
 .footer-menu a {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 16px;
   line-height: 24px;
 }
 
 .copyright-text {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   line-height: 26px;
   text-align: right;
   color: #fcfcfd;
+}
+
+.footer-mobile {
+  display: none;
+}
+
+.copyright-mb-text {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-wrapper {
+    padding: 16px 0;
+    padding-bottom: 16px;
+  }
+
+  .footer-wrapper .container {
+    padding: 0 20px;
+  }
+
+  .footer-logo {
+    width: 150px;
+  }
+
+  .footer-social {
+    display: none;
+  }
+
+  .footer-menu {
+    display: none;
+  }
+
+  .copyright-text {
+    display: none;
+  }
+
+  .footer-mobile {
+    margin-top: 16px;
+    display: flex;
+    padding: 0 20px;
+    justify-content: space-between;
+  }
+
+  .footer-mb-social,
+  .footer-mb-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .footer-mb-social a,
+  .footer-mb-menu a {
+    font-family: "Nunito", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .copyright-mb-text {
+    display: block;
+    font-family: "Nunito";
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    color: #98a2b3;
+    padding: 0 20px;
+    margin-top: 40px;
+  }
 }
 
 /*================ Responsive media queries =================*/
@@ -1183,7 +1531,7 @@ a {
 
 .contact-form .field input::placeholder,
 .contact-form textarea::placeholder {
-  font-family: 'Barlow', 'Arges', sans-serif;
+  font-family: "Barlow", "Arges", sans-serif;
   font-size: 16px;
   color: #475467;
 }
@@ -1257,14 +1605,14 @@ a {
 } */
 
 @font-face {
-  font-family: 'font1';
-  src: url('./assets/Satoshi-Bold.otf');
+  font-family: "font1";
+  src: url("./assets/Satoshi-Bold.otf");
   font-weight: 700;
 }
 
 #case-study #header h1 {
   font-size: 72px;
-  font-family: 'font1';
+  font-family: "font1";
   text-align: center;
   background: linear-gradient(91.25deg, #7dffaf -2.45%, #4e91f6 107.38%);
   -webkit-background-clip: text;
@@ -1314,7 +1662,7 @@ a {
 }
 
 .slider-header h2 {
-  font-family: 'font1';
+  font-family: "font1";
   font-weight: 700;
   font-size: 48px;
 }
@@ -1327,7 +1675,7 @@ a {
   height: 44px;
   background: rgba(125, 255, 175, 0.1);
   border-radius: 8px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 18px;
   font-weight: 400;
   color: #7dffaf;
@@ -1355,7 +1703,7 @@ a {
 .slider-card .content h4 {
   padding-top: 24px;
   padding-bottom: 18px;
-  font-family: 'font1';
+  font-family: "font1";
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
@@ -1363,7 +1711,7 @@ a {
 }
 
 .slider-card .content p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 400;
   font-size: 18px;
   line-height: 32px;
@@ -1372,7 +1720,7 @@ a {
 }
 
 .slider-card .content .btn-see-more {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 400;
   font-size: 18px;
   color: #7dffaf;
