--- a/style.css
+++ b/style.css
@@ -5,32 +5,32 @@
 }
 
 @font-face {
-  font-family: "Satoshi";
-  src: url("/assets/fonts/Satoshi-Black.otf");
+  font-family: 'Satoshi';
+  src: url('/assets/fonts/Satoshi-Black.otf');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "Satoshi";
-  src: url("/assets/fonts/Satoshi-Bold.otf");
+  font-family: 'Satoshi';
+  src: url('/assets/fonts/Satoshi-Bold.otf');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
-  font-family: "Satoshi";
-  src: url("/assets/fonts/Satoshi-Medium.otf");
+  font-family: 'Satoshi';
+  src: url('/assets/fonts/Satoshi-Medium.otf');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: "Satoshi";
-  src: url("/assets/fonts/Satoshi-Regular.otf");
+  font-family: 'Satoshi';
+  src: url('/assets/fonts/Satoshi-Regular.otf');
   font-weight: 400;
   font-style: normal;
 }
 
 body {
-  font-family: "Barlow", "Arges", sans-serif;
+  font-family: 'Barlow', 'Arges', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 1rem;
@@ -40,7 +40,7 @@ body {
 }
 
 h1 {
-  font-family: "Satoshi", "Arges", sans-serif;
+  font-family: 'Satoshi', 'Arges', sans-serif;
 }
 
 a {
@@ -71,7 +71,7 @@ a {
 /*========== Button styling ==========*/
 .btn {
   /* width: 100%; */
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -121,6 +121,8 @@ a {
 /*========== Navbar styling ==========*/
 .main-nav {
   background: #101828;
+  position: relative;
+  z-index: 9999;
 }
 
 .main-nav .container {
@@ -156,7 +158,7 @@ a {
 }
 
 .nav-items ul li a {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 32px;
 }
@@ -165,7 +167,7 @@ a {
   background: #7dffaf;
   color: #010610;
   margin-left: 56px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
@@ -260,7 +262,7 @@ a {
 
 /*========== Hero section styling ==========*/
 .wlc-zeta {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 500;
   font-size: 14px;
   line-height: 22px;
@@ -291,7 +293,7 @@ a {
 }
 
 .hero-desc {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Barlow', sans-serif;
   padding: 16px 0;
   font-size: 18px;
   line-height: 28px;
@@ -332,7 +334,7 @@ a {
 }
 
 .review-left h3 {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   font-weight: 700;
   font-size: 48px;
   line-height: 65px;
@@ -375,7 +377,7 @@ a {
 }
 
 .rating-number p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
@@ -387,7 +389,7 @@ a {
 }
 
 .review-right h3 {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 600;
   font-size: 32px;
   line-height: 44px;
@@ -408,7 +410,7 @@ a {
 }
 
 .review-right-item p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 26px;
   color: #c7d9fc;
@@ -440,14 +442,14 @@ a {
 }
 
 .st-info-left p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 16px;
   line-height: 27px;
   color: #c7d9fc;
 }
 
 .st-author-name {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 600;
   font-size: 18px;
   line-height: 26px;
@@ -456,7 +458,7 @@ a {
 
 .st-author-position {
   margin-top: 8px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 16px;
   line-height: 22px;
   color: #c7d9fc;
@@ -464,7 +466,7 @@ a {
 
 .single-testimonial-text {
   margin-top: 8px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 24px;
   line-height: 34px;
   color: #fcfcfd;
@@ -512,7 +514,7 @@ a {
 
 .multi-testimonial-text {
   margin-top: 8px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 26px;
   color: #fcfcfd;
@@ -532,7 +534,7 @@ a {
 }
 
 .multi-testimonial-info .author-name {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 600;
   font-size: 18px;
   line-height: 26px;
@@ -541,7 +543,7 @@ a {
 
 .multi-testimonial-info .author-position {
   margin-top: 8px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 16px;
   line-height: 22px;
   color: #c7d9fc;
@@ -564,7 +566,7 @@ a {
 }
 
 .marketing-heading {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 700;
   font-size: 48px;
   line-height: 64px;
@@ -594,7 +596,7 @@ a {
 
 .marketing-card-content {
   margin-top: 32px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 34px;
   text-align: center;
@@ -613,7 +615,7 @@ a {
 
 .how-works-heading {
   max-width: 545px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 700;
   font-size: 40px;
   line-height: 58px;
@@ -640,7 +642,7 @@ a {
 }
 
 .hw-item p {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
@@ -654,7 +656,7 @@ a {
   background: #1d2939;
   border-radius: 16px;
   padding: 64px 56px;
-  background-image: url("/assets/images/hw-bg.png");
+  background-image: url('/assets/images/hw-bg.png');
   background-position: bottom left;
   background-size: contain;
   background-repeat: no-repeat;
@@ -674,7 +676,7 @@ a {
 
 .hw-bottom-card-left h2 {
   width: 535px;
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   font-weight: 700;
   font-size: 48px;
   line-height: 64px;
@@ -694,7 +696,7 @@ a {
 }
 
 .hw-card-item p {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
@@ -714,7 +716,7 @@ a {
   }
 
   .how-works-heading {
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-size: 24px;
     line-height: 30px;
     text-align: center;
@@ -731,7 +733,7 @@ a {
   }
 
   .hw-item p {
-    font-family: "Nunito";
+    font-family: 'Nunito';
     font-size: 14px;
     line-height: 22px;
     text-align: center;
@@ -776,7 +778,7 @@ a {
   }
 
   .tl-mobile-inner h2 {
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-weight: 700;
     font-size: 24px;
     line-height: 30px;
@@ -798,7 +800,7 @@ a {
   }
 
   .tl-mobile-card h4 {
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
@@ -807,7 +809,7 @@ a {
 
   .tl-btn {
     margin-top: 8px;
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     font-weight: 500;
     font-size: 14px;
     line-height: 22px;
@@ -847,7 +849,7 @@ a {
 
 .process-card-content {
   margin-top: 32px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 34px;
   text-align: center;
@@ -855,7 +857,7 @@ a {
 }
 
 .process-heading {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 700;
   font-size: 48px;
   line-height: 65px;
@@ -919,14 +921,14 @@ a {
 .faq-left h2 {
   margin-top: 19px;
   margin-bottom: 16px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 500;
   font-size: 36px;
   line-height: 49px;
 }
 
 .faq-left p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 26px;
   color: rgba(255, 255, 255, 0.7);
@@ -958,7 +960,7 @@ a {
 }
 
 .faq-accordion-title {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 700;
   font-size: 24px;
   line-height: 36px;
@@ -971,7 +973,7 @@ a {
 }
 
 .faq-accordion-body p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 26px;
   color: rgba(255, 255, 255, 0.7);
@@ -1002,13 +1004,13 @@ a {
   }
 
   .faq-left p {
-    font-family: "Nunito";
+    font-family: 'Nunito';
     font-size: 14px;
     line-height: 22px;
   }
 
   .faq-accordion-title {
-    font-family: "Nunito";
+    font-family: 'Nunito';
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -1019,7 +1021,7 @@ a {
   }
 
   .faq-accordion-body p {
-    font-family: "Nunito";
+    font-family: 'Nunito';
     font-size: 14px;
     line-height: 22px;
   }
@@ -1046,14 +1048,14 @@ a {
   border-radius: 16px;
   padding: 42px;
   padding-bottom: 62px;
-  background-image: url("/assets/images/booking-bg.png");
+  background-image: url('/assets/images/booking-bg.png');
   background-position: bottom left;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .booking-content h3 {
-  font-family: "font1";
+  font-family: 'font1';
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
@@ -1062,7 +1064,7 @@ a {
 }
 
 .booking-content p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 32px;
   color: #e4e7ec;
@@ -1134,7 +1136,7 @@ a {
     right: 0;
     left: 0;
     display: block;
-    background-image: url("/assets/images/booking-mb-bg.png");
+    background-image: url('/assets/images/booking-mb-bg.png');
     height: 134px;
     width: 100%;
     background-repeat: no-repeat;
@@ -1198,7 +1200,7 @@ a {
 }
 
 .newsletter-container h2 {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 600;
   font-size: 32px;
   line-height: 44px;
@@ -1224,7 +1226,7 @@ a {
 
 .newsletter-input input::placeholder,
 .newsletter-input input {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -1256,7 +1258,7 @@ a {
     max-width: 335px;
   }
   .newsletter-container h2 {
-    font-family: "Nunito";
+    font-family: 'Nunito';
     font-weight: 500;
     font-size: 14px;
     line-height: 19px;
@@ -1316,7 +1318,7 @@ a {
 
 .footer-social a {
   padding: 8px 16px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
 }
 
@@ -1328,13 +1330,13 @@ a {
 }
 
 .footer-menu a {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 16px;
   line-height: 24px;
 }
 
 .copyright-text {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   line-height: 26px;
   text-align: right;
@@ -1391,7 +1393,7 @@ a {
 
   .footer-mb-social a,
   .footer-mb-menu a {
-    font-family: "Nunito", sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-weight: 500;
     font-size: 14px;
     line-height: 22px;
@@ -1399,7 +1401,7 @@ a {
 
   .copyright-mb-text {
     display: block;
-    font-family: "Nunito";
+    font-family: 'Nunito';
     font-size: 12px;
     line-height: 18px;
     text-align: center;
@@ -1531,7 +1533,7 @@ a {
 
 .contact-form .field input::placeholder,
 .contact-form textarea::placeholder {
-  font-family: "Barlow", "Arges", sans-serif;
+  font-family: 'Barlow', 'Arges', sans-serif;
   font-size: 16px;
   color: #475467;
 }
@@ -1605,14 +1607,14 @@ a {
 } */
 
 @font-face {
-  font-family: "font1";
-  src: url("./assets/Satoshi-Bold.otf");
+  font-family: 'font1';
+  src: url('./assets/Satoshi-Bold.otf');
   font-weight: 700;
 }
 
 #case-study #header h1 {
   font-size: 72px;
-  font-family: "font1";
+  font-family: 'font1';
   text-align: center;
   background: linear-gradient(91.25deg, #7dffaf -2.45%, #4e91f6 107.38%);
   -webkit-background-clip: text;
@@ -1662,7 +1664,7 @@ a {
 }
 
 .slider-header h2 {
-  font-family: "font1";
+  font-family: 'font1';
   font-weight: 700;
   font-size: 48px;
 }
@@ -1675,7 +1677,7 @@ a {
   height: 44px;
   background: rgba(125, 255, 175, 0.1);
   border-radius: 8px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 18px;
   font-weight: 400;
   color: #7dffaf;
@@ -1703,7 +1705,7 @@ a {
 .slider-card .content h4 {
   padding-top: 24px;
   padding-bottom: 18px;
-  font-family: "font1";
+  font-family: 'font1';
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
@@ -1711,7 +1713,7 @@ a {
 }
 
 .slider-card .content p {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 400;
   font-size: 18px;
   line-height: 32px;
@@ -1720,7 +1722,7 @@ a {
 }
 
 .slider-card .content .btn-see-more {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 400;
   font-size: 18px;
   color: #7dffaf;
